force-app/main/default/src/objects/HealthCloudGA__JobFlowDataMapping__mdt/HealthCloudGA__JobFlowDataMapping__mdt.object-meta.xml
<CustomObject>
    <description>Source to Target field mapping for objects created in Job Flow</description>
    <label>Job Flow Data Mapping</label>
    <pluralLabel>Job Flow Data Mappings</pluralLabel>
</CustomObject>