force-app/main/default/src/objects/HealthCloudGA__JobFlowDataMapping__mdt/fields/HealthCloudGA__MappingGroupName__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__MappingGroupName__c</fullName>
    <description>Identifies a group of mappings to be applied to a particular flow</description>
    <label>Mapping Group Name</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>