force-app/main/default/src/objects/HealthCloudGA__JobFlowDataMapping__mdt/fields/HealthCloudGA__SourceField__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SourceField__c</fullName>
    <description>Field on source object to access data to be mapped to target</description>
    <label>Source Field</label>
    <length>40</length>
    <type>Text</type>
</CustomField>