force-app/main/default/src/objects/HealthCloudGA__JobFlowDataMapping__mdt/fields/HealthCloudGA__SourceObject__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SourceObject__c</fullName>
    <description>Object from which to access field data being mapped to target</description>
    <label>Source Object</label>
    <length>40</length>
    <type>Text</type>
</CustomField>