force-app/main/default/src/objects/HealthCloudGA__JobFlowDataMapping__mdt/fields/HealthCloudGA__TargetField__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__TargetField__c</fullName>
    <description>Field on target object for which to assign value of source field in flow mapping.</description>
    <label>Target Field</label>
    <length>40</length>
    <type>Text</type>
</CustomField>