force-app/main/default/src/objects/HealthCloudGA__JobFlowDataMapping__mdt/fields/HealthCloudGA__TargetObject__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__TargetObject__c</fullName>
    <description>Base object on which to assign the field specified by TargetField</description>
    <label>Target Object</label>
    <length>40</length>
    <type>Text</type>
</CustomField>